---
source: src/parser/mod.rs
assertion_line: 128
expression: "format_pair(pair.unwrap(), 0, true)"
---
- program
  - statement > assignment_statement
    - single_name_part: "a"
    - colon: ":"
    - expression > unary_expression > simple_expression > literal > number: "4"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "show"
    - expression > unary_expression > simple_expression > single_name_part: "a"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "new"
    - single_name_part: "line"
  - EOI: ""
